ui.frontend/src/main/webpack/etisalat/styles/core-components/image/features_section.scss
// btn with border around
.btn-wit-border {
  border: $border-step-1 solid $white;
  border-radius: $border-radius-step-1;
  padding: $padding-step-1 $padding-step-4;
  text-align: center;
  width: auto;
}

// class name feature-watch
// aem authoring name Feature Watch
.cmp_text--feature-watch {
  @include respond-to-min($tablet) {
    margin-bottom: toRem(112) !important;
    max-height: toRem(293);
    min-height: toRem(293);
  }

  @include respond-to-min($desktop) {
    margin-bottom: toRem(50) !important;
    max-height: toRem(468);
    min-height: toRem(468);
  }

  .cmp-image__image {
    @include respond-to-min($tablet) {
      height: toRem(371);
      margin-left: toRem(-30);
      margin-top: $margin-step-2;
      width: toRem(297);
    }

    @include respond-to-min($desktop) {
      height: toRem(479);
      margin-left: 0;
      margin-top: toRem(36);
      width: toRem(384);
    }
  }

  .cmp_btn {
    margin: 0;

    img {
      @include respond-to-min($tablet) {
        height: toRem(29);
        margin: toRem(60) 0 toRem(16);
      }

      @include respond-to-min($desktop) {
        height: toRem(36);
        margin: toRem(140) 0 toRem(32);
      }
    }
  }

  .cmp-text {
    @include respond-to-min($tablet) {
      width: toRem(340);
    }

    @include respond-to-min($desktop) {
      width: toRem(588);
    }

    h4 {
      @include respond-to-min($tablet) {
        font-size: $font28;
        line-height: toRem(34);
        margin: toRem(75) 0 toRem(16);
      }

      @include respond-to-min($desktop) {
        font-size: $font32;
        line-height: toRem(40);
        margin: toRem(160) 0 toRem(32);
      }
    }

    p {
      @include respond-to-min($tablet) {
        font-size: $font14;
        line-height: toRem(20);
        margin-bottom: $margin-step-2;
      }

      @include respond-to-min($desktop) {
        font-size: $font16;
        margin-bottom: $margin-step-3;
      }

      .cmp-link__arrow_left {
        @include respond-to-min($tablet) {
          padding-left: $padding-step-0;
          padding-right: $padding-step-1;
        }

        @include respond-to-min($desktop) {
          font-size: $font14;
          line-height: toRem(20);
          padding-right: calc(#{$padding-step-1} + 4px);
        }
      }

      .cmp-button--secondary {
        min-width: toRem(280);
      }
    }
  }

  .cmp-container {
    margin: 0 auto;
    padding: $padding-step-0 calc(#{$padding-step-1} + 4px);

    @include respond-to-max($tablet) {
      width: 100%;
    }

    @include respond-to-min($desktop) {
      width: toRem(1224);
    }
  }
}

@include respond-to-max($phone) {
  .cmp_text--feature-watch {
    margin-bottom: toRem(176) !important;
    max-height: toRem(374);
    min-height: toRem(374);
    padding-top: $padding-step-3 !important;

    .image {
      .cmp-image__image {
        height: toRem(283);
        margin-left: toRem(24);
        width: toRem(240);
      }
    }

    .cmp_btn {
      margin: 0;

      img {
        height: toRem(29);
        margin-bottom: $margin-step-3;
      }
    }

    .cmp-text {
      position: relative;

      h4 {
        font-size: $font28;
        line-height: toRem(34);
        margin: 0 0 $margin-step-3;
      }

      p {
        font-size: $font14;
        margin-bottom: $margin-step-2;

        .cmp-link__arrow_left {
          position: absolute;
          right: toRem(70);
          top: toRem(400);
        }

        .cmp-button--secondary {
          position: absolute;
          top: toRem(460);
          width: 100%;
        }
      }
    }

    .cmp-container {
      margin: 0 auto;
      padding: $padding-step-0 calc(#{$padding-step-1} + 4px);
      width: 100%;
    }
  }
}
/* ... */

